<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserActivity">

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="358dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/et_user_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_id" />

    <EditText
        android:id="@+id/et_user_telephone"
        android:layout_width="358dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/et_user_telephone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

    <Button
        android:id="@+id/btn_register_user"
        android:layout_width="356dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:onClick="clickRegisterUser"
        android:text="@string/btn_user_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_telephone" />

    <EditText
        android:id="@+id/et_user_id"
        android:layout_width="356dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/et_user_id"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_register" />

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="260dp"
        android:layout_height="34dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_user_register"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>